tests/sumo/spec/distribution/errors/speedDev_invalid/options.sumo
--no-step-log --net-file=net.net.xml -r=input_routes.rou.xml 
--duration-log.statistics
